--- a/xgboostv4.ipynb
+++ b/xgboostv4.ipynb
@@ -64,8 +64,15 @@
     "# Create output directory with timestamp\n",
     "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "output_dir = f\"{args.output_dir}/{dataset_key}_{timestamp}\"\n",
-    "os.makedirs(output_dir, exist_ok=True)\n",
-    "\n",
+    "os.makedirs(output_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Base directory\n",
     "base_dir = r\"D:\\20241129_solid_nN_1.3_2.4_mdck_siRNA_tnsfn_chlr\"\n",
     "\n",
