--- a/xgboost_chlr_1.3.ipynb
+++ b/xgboost_chlr_1.3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# Base directory\n",
-    "base_dir = r\"C:\\Users\\ChiappiniLab.Chiappini_Lab\\Desktop\\Sam\\20241129_solid_nN_1.3_2.4_mdck_siRNA_tnsfn_chlr\\20241129_solid_nN_1.3_mdck_chlr_dataset\"\n",
-    "dataset_path = base_dir + r\"\\solid_1.3_chlr_cell_level.csv\"\n",
+    "base_dir = r\"D:\\20241129_solid_nN_1.3_2.4_mdck_siRNA_tnsfn_chlr\"\n",
+    "dataset_path = base_dir + r\"solid_1.3_chlr_cell_level.csv\"\n",
     "\n",
     "# Define morphological and intensity features\n",
     "cell_morph_features = [\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,10 +203,10 @@
     "   \n",
     "   model = xgb.XGBClassifier(random_state=42, **params)\n",
     "   \n",
-    "   inner_cv = StratifiedGroupKFold(n_splits=3, shuffle=True, random_state=42)\n",
+    "   inner_cv = StratifiedKFold(n_splits=3, shuffle=True, random_state=42)\n",
     "   inner_scores = []\n",
     "   \n",
-    "   for inner_train_idx, inner_valid_idx in inner_cv.split(X_train_scaled, y_train, groups=images[train_idx]):\n",
+    "   for inner_train_idx, inner_valid_idx in inner_cv.split(X_train_scaled, y_train):\n",
     "    X_inner_train = X_train_scaled[inner_train_idx]\n",
     "    X_inner_valid = X_train_scaled[inner_valid_idx]\n",
     "    y_inner_train = y_train[inner_train_idx]\n",
@@ -383,13 +383,29 @@
     " print(f\"Accuracy: {avg_metrics['accuracy']:.4f} ± {avg_metrics['accuracy_std']:.4f}\")\n",
     " print(f\"F1 Score (weighted): {avg_metrics['f1_weighted']:.4f} ± {avg_metrics['f1_weighted_std']:.4f}\")\n",
     " print(f\"Precision (weighted): {avg_metrics['precision_weighted']:.4f} ± {avg_metrics['precision_weighted_std']:.4f}\")\n",
-    " print(f\"Recall (weighted): {avg_metrics['recall_weighted']:.4f} ± {avg_metrics['\n"
+    " print(f\"Recall (weighted): {avg_metrics['recall_weighted']:.4f} ± {avg_metrics['recall_weighted_std']:.4f}\")\n",
+    " print(f\"ROC AUC: {avg_metrics['roc_auc']:.4f} ± {avg_metrics['roc_auc_std']:.4f}\")\n",
+    " print(f\"Best Fold: {best_fold}\")\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
